# tablio

./: .gitignore  LICENSE  README.md  index.html  install.sh  package-lock.json  package.json  playwright.config.ts  renovate.json  vite.config.ts
.cursor/rules/: component-patterns.mdc  design-system.mdc  project-structure.mdc  testing.mdc  theming.mdc
.github/: RELEASE.md
.github/workflows/: ci.yml  deploy-install-script.yml  release.yml  renovate-automerge.yml
apt/: index.html
debian/: changelog  control  copyright  files  rules  tablio.desktop
e2e/: README.md  activity.spec.ts  alter-table.spec.ts  app.spec.ts  backup-restore.spec.ts  chart-view.spec.ts  column-organizer.spec.ts  connection-dialog.spec.ts  create-table.spec.ts  data-grid.spec.ts  ddl-viewer.spec.ts  dump-restore.spec.ts  erd.spec.ts  export.spec.ts  filter-bar.spec.ts  helpers.ts  import.spec.ts  keyboard-zoom.spec.ts  query-console.spec.ts  query-stats.spec.ts  role-manager.spec.ts  row-detail.spec.ts  sidebar.spec.ts  tab-bar.spec.ts  table-info.spec.ts  table-stats.spec.ts
rpm/: key.gpg  tablio.repo
rpm/repodata/: 1c1eb0f8a33aadb28f237af1ab54f33a098b0f84c7fa01c365fb9f84b04fdba5-filelists.sqlite.bz2  1c39b99c90bb1b0927f5ebcc7e7d15368814a98413131a4c33e0fa64d0a939fd-primary.sqlite.bz2  21342ba272d9f862c067c611273178ec27ae3fa981803608a59ff4918603923b-primary.sqlite.bz2  2572934deadf062af988ee7a15d29ab8ca42fbf92524d3e27344868233228e79-other.sqlite.bz2  3ea2e302f71cc4d7bb0672555d2a170aeaebe5f932b916d6ed8f78471364b7e0-filelists.sqlite.bz2  4554ff48eeaa378b053ba0301fed266610044cd357c19aa85a7ad8f8a876046f-primary.sqlite.bz2  4565c1a5378d93fd1c08f83e40e1477b95b89d28d01710e6e707ad34d742c846-other.sqlite.bz2  53dc8be58b90d1e28e2bc7bc0d2d8ef44ac36d7fcc09b30767dd8dc35b17aec4-other.sqlite.bz2  55bb197845d92a353bc232ae503535c3ac160f48cac7e237ee78724e693767c1-primary.sqlite.bz2  56ecc4914e0b40bea11680a85587395d7f2a4d12454b36f4a95266e9591d1664-other.sqlite.bz2  repomd.xml  repomd.xml.asc  (+26 more)
src/: App.test.ts  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: export.rs  lib.rs  main.rs
src-tauri/src/commands/: backup.rs  connection.rs  data.rs  export.rs  mod.rs  query.rs  roles.rs  saved_queries.rs  schema.rs  system.rs
src-tauri/src/db/: cassandra.rs  cockroachdb.rs  mariadb.rs  mod.rs  mssql.rs  mysql.rs  mysql_common.rs  pg_common.rs  pool.rs  postgres.rs  sqlite.rs  tidb.rs
src-tauri/src/models/: types.rs
src-tauri/tests/: cassandra_integration.rs  cockroachdb_integration.rs  mariadb_integration.rs  mssql_integration.rs  mysql_integration.rs  postgres_integration.rs  sqlite_integration.rs  tidb_integration.rs
src/components/: ExportMenu.css  (+5 more)
(+89 files in other folders)
