[package]
name = "tablio"
version = "0.2.4"
edition = "2021"

[lib]
name = "tablio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "mysql",
    "sqlite",
    "json",
    "chrono",
    "uuid",
    "rust_decimal",
] }
rust_decimal = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
tauri-plugin-dialog = "2.6.0"
sysinfo = "0.38.4"
scylla = "1.5"
tiberius = { version = "0.12.3", default-features = false, features = ["tokio", "rustls", "tds73"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
urlencoding = "2.1.3"
